<resources>
    <string name="app_name">云雀 SR 3.2</string>
    <string name="app_version">@string/VERSION_NAME</string>
    <string name="user_setup">设置服务器地址.例如：192.168.1.100:8088</string>
    <string name="user_setup_appkey">设置 appkey. 请从服务器管理员处获取</string>
    <string name="user_setup_appsecret">设置 appsecret.请从服务器管理员处获取</string>
    <string name="user_setup_btn_advance">高级设置</string>
    <string name="summit">确定</string>
    <string name="cancle">取消</string>
    <string name="ui_switch_fetch">是否同步应用列表</string>
    <string name="ui_switch_player_mode">是否使用互动模式</string>
    <string name="ui_switch_player_mode_2">互动模式</string>
    <string name="ui_switch_vr">使用双屏模式</string>
    <string name="ui_menu_code_rate">码率</string>
    <string name="ui_menu_frame_rate">帧率</string>
    <string name="ui_button_enter">进入</string>
    <string name="ui_button_sync">同步中</string>
    <string name="ui_setup_title">设置</string>
    <string name="ui_setup_summit">确定</string>
    <string name="ui_setup_use_https">是否使用HTTPS</string>
    <string name="ui_button_keyboard">键盘</string>
    <string name="ui_button_handle">手柄</string>
    <string name="ui_button_vmouse">虚拟鼠标</string>
    <string name="ui_button_back">返回</string>
    <string name="ui_vmouse_bg">pc mouse background</string>
    <string name="ui_vmouse_left">pc mouse left button</string>
    <string name="ui_vmouse_right">pc mouse right button</string>
    <string name="ui_vmouse_bottom">pc mouse bottom button</string>
    <string name="ui_cursor_bg">pc cursor background</string>
    <string name="ui_loading">Loading…</string>
    <string name="ui_text_app_key">AppKey</string>
    <string name="ui_text_app_seccet">UseAppSecret</string>
    <string name="ui_menu_close">关闭菜单</string>
    <string name="ui_menu">菜单</string>
    <string name="ui_menu_info">说明</string>
    <string name="ui_menu_info_gesture">手势操作</string>
    <string name="ui_menu_info_gesture_move">左键拖拽鼠标:单指在屏幕上滑动表示按下鼠标左键移动鼠标</string>
    <string name="ui_menu_info_gesture_click">左键单击:单指轻点屏幕表示鼠标左键单击</string>
    <string name="ui_menu_info_gesture_context_menu">鼠标右键:双指轻点屏幕表示鼠标右键单击</string>
    <string name="ui_menu_info_gesture_wheel">鼠标滚轮:双指扩大手势对应滚轮向上，缩小手势对应鼠标滚轮向下</string>
    <string name="ui_menu_info_gesture_mid">鼠标中键:三指轻点屏幕表示中间单击</string>
    <string name="ui_menu_info_mode">当云端应用支持手柄操作时，默认直接手柄模式，本地手柄操作直接对应成云端的手柄操作。当云端应用不支持手柄操作时，默认使用键盘映射手柄模式，将本地手柄/遥控器的操作映射为云端的键盘操作。</string>
    <string name="ui_menu_info_mapping_mode">一. 键盘映射手柄模式</string>
    <string name="ui_menu_info_remote_control">遥控器的映射方式：</string>
    <string name="ui_menu_info_remote_control_1">1. 模式1 上下左右映射为WSAD，确认映射为空格</string>
    <string name="ui_menu_info_remote_control_2">2. 模式2 上下左右映射为上下左右箭头，确认映射为回车</string>
    <string name="ui_menu_info_gamepad">游戏手柄的映射方式:</string>
    <string name="ui_menu_info_gamepad_1">1. 模式1 左摇杆映射为 WASD，右摇杆映射为上下左右箭头，手柄X映射为J，手柄Y映射为I，手柄A映射为K，手柄B映射为L，手柄L1映射为Q，手柄R1映射为空格</string>
    <string name="ui_menu_info_gamepad_2">2. 模式2 左摇杆和右摇杆都映射为上下左右箭头，手柄X/A映射为回车，手柄Y/B映射为ESC，手柄L1映射为Q，手柄R1映射为E</string>
    <string name="ui_menu_info_virtual_cursor">二. 虚拟鼠标操作方式：</string>
    <string name="ui_menu_info_virtual_cursor_remote_control">1. 遥控器上下左右箭头移动虚拟鼠标，确认键映射左键，菜单映射键右键</string>
    <string name="ui_menu_info_virtual_cursor_gamepad">2. 游戏手柄左摇杆移动鼠标，X键映射鼠标左键，B键映射鼠标右键，Y鼠标滚轮向上，B鼠标滚轮向下</string>
    <string name="ui_menu_player_list">玩家列表</string>
    <string name="ui_menu_virtual_cursor">虚拟鼠标</string>
    <string name="ui_menu_exit">退出</string>
    <string name="ui_menu_direct_gamepad_mode">直接手柄模式</string>
    <string name="ui_menu_keyboard_mapping_gamepad_mode">键盘映射手柄模式</string>
    <string name="ui_menu_joystick_mode_1">摇杆模式1 %1$s</string>
    <string name="ui_menu_joystick_mode_2">摇杆模式2 %1$s</string>
    <string name="ui_menu_dpad_mode_1">遥控器模式1 %1$s</string>
    <string name="ui_menu_dpad_mode_2">遥控器模式2 %1$s</string>
    <string name="ui_menu_mode_current">(当前)</string>
    <string name="ui_menu_button_livestreaming">直播推流</string>
    <string name="ui_menu_button_aichat">智能语音</string>
    <string name="ui_alert_quit">确认退出？</string>
    <string name="ui_interactive_dialog_title">互动模式</string>
    <string name="ui_interactive_dialog_role">角色</string>
    <string name="ui_interactive_dialog_player">演示者</string>
    <string name="ui_interactive_dialog_ob">观看者</string>
    <string name="ui_interactive_dialog_nickname">昵称</string>
    <string name="ui_interactive_dialog_auth_mode">验证方式</string>
    <string name="ui_interactive_dialog_room_code">口令</string>
    <string name="ui_interactive_dialog_gen_room_code">生成口令</string>
    <string name="ui_interactive_dialog_enter_app">进入应用</string>
    <string name="ui_applist_empty">当前应用列表空空如也</string>
    <string name="ui_applist_failed">获取列表失败，请检查网络或点击刷新按钮</string>
    <string name="ui_applist_fresh_button">刷新</string>
    <string name="ui_setup_livestreaming_title">推流设置</string>
    <string name="ui_setup_livestreaming_path">推流地址</string>
    <string name="ui_setup_livestreaming_key">密钥</string>
    <string name="ui_setup_livestreaming_stop">停止</string>
    <string name="ui_setup_livestreaming_empty_path">请设置推流地址</string>
    <string name="ui_setup_livestreaming_starting">开始推流</string>
    <string name="ui_setup_livestreaming_stoping">停止推流</string>
    <string name="ui_media_video">打开摄像头</string>
    <string name="ui_media_mic">打开麦克风</string>
    <string name="ui_statics_name_rtt">网络时延</string>
    <string name="ui_statics_name_biterate">码率</string>
    <string name="ui_statics_name_decode_fps">解码帧率</string>
    <string name="ui_statics_name_packgelost">丢包率</string>
    <string name="ui_statics_name_server_capture">采集</string>
    <string name="ui_statics_name_server_render">渲染</string>
    <string name="ui_statics_name_server_encoder">编码</string>
    <string name="ui_button_aichat_send">发送</string>
    <string name="ui_button_aichat_input_hit">Say hi~</string>
    <string name="ui_button_aichat_recode">按住 说话</string>
</resources>
