<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_setup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <CheckBox
        android:id="@+id/setup_checkbox_use_https"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_setup_use_https" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/user_setup">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_app_key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/user_setup_appkey"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_app_secret"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/user_setup_appsecret"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_setup_advance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_setup_btn_advance" />
</LinearLayout>