<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/textView4_livestreaming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ui_interactive_dialog_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radio_group_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ui_interactive_dialog_role"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button_player"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:checked="true"
            android:text="@string/ui_interactive_dialog_player" />

        <RadioButton
            android:id="@+id/radio_button_ob"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:checked="false"
            android:text="@string/ui_interactive_dialog_ob" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_text_live_path"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/ui_interactive_dialog_nickname"
        android:inputType="textPersonName"
        android:autofillHints="@string/ui_interactive_dialog_nickname" />

    <RadioGroup
        android:id="@+id/radio_group_ob_auth_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ui_interactive_dialog_auth_mode"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button_room_code"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:checked="true"
            android:text="@string/ui_interactive_dialog_room_code" />

        <RadioButton
            android:id="@+id/radio_button_task_id"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:checked="false"
            android:text="TaskId" />

    </RadioGroup>

    <EditText
        android:id="@+id/input_text_ob_mode_roomcode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/ui_interactive_dialog_room_code"
        android:inputType="textPersonName" />

    <LinearLayout
        android:id="@+id/gen_room_code_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ui_interactive_dialog_room_code"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_room_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="TextView"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_gen_room_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ui_interactive_dialog_gen_room_code" />

    </LinearLayout>

    <Button
        android:id="@+id/button_setup_live_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_interactive_dialog_enter_app" />
</LinearLayout>