<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="74dp"
    android:layout_height="102dp"
    android:layout_margin="0dp"
    android:padding="0dp">

    <ImageView
        android:id="@+id/vmouse_bg"
        android:layout_width="74dp"
        android:layout_height="102dp"
        android:contentDescription="@string/ui_vmouse_bg"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/vmouse"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="111dp" />

    <ImageButton
        android:id="@+id/vmouse_bottom"
        android:layout_width="66dp"
        android:layout_height="46dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ui_vmouse_bottom"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/cloudlark_vmouse_bottom"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="186dp"
        tools:srcCompat="@mipmap/vmouse_bottom_btn_dark" />

    <ImageButton
        android:id="@+id/vmouse_left"
        android:layout_width="33dp"
        android:layout_height="51dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="3dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ui_vmouse_left"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/cloudlark_vmouse_left"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="111dp"
        tools:srcCompat="@mipmap/vmouse_left_btn_dark" />

    <ImageButton
        android:id="@+id/vmouse_right"
        android:layout_width="33dp"
        android:layout_height="51dp"
        android:layout_gravity="top|end"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ui_vmouse_right"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/cloudlark_vmouse_right"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="111dp" />

</FrameLayout>