<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentDark">

    <TextView
        android:id="@+id/text_state_rtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="RTT"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:divider="@drawable/hight_light_button"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/room_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/menu_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:text="@string/ui_menu_close"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/menu_button_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onMenuInfo"
                android:text="@string/ui_menu_info"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/menu_button_mepping_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onToggleGamepadMappingMode"
                android:text="@string/ui_menu_direct_gamepad_mode"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/menu_button_player_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onMenuPlayerList"
                android:text="@string/ui_menu_player_list"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/menu_button_dpad_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onDapdMapping1"
                android:text="@string/ui_menu_dpad_mode_1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/menu_button_dpad_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onDapdMapping2"
                android:text="@string/ui_menu_dpad_mode_1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/menu_button_joystick_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onJoystickMapping1"
                android:text="@string/ui_menu_joystick_mode_1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/menu_button_joystick_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:onClick="onJoystickMapping2"
                android:text="@string/ui_menu_joystick_mode_2"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/menu_button_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:width="300dp"
                android:background="@drawable/hight_light_button"
                android:text="@string/ui_menu_exit"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="说明"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/menu_button_back_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="220dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/hight_light_button"
            android:onClick="onMenuList"
            android:text="返回菜单"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/textview_info"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scollview_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textview_info"
            app:layout_constraintTop_toTopOf="@id/textview_info">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_menu_info_gesture"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_menu_info_gesture_move"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_menu_info_gesture_click"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_menu_info_gesture_context_menu"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_menu_info_gesture_wheel"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_menu_info_gesture_mid"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_player_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="玩家列表"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/player_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="90dp"
            android:descendantFocusability="blocksDescendants"
            android:divider="@android:color/white"
            android:dividerHeight="2dp"
            android:focusable="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/menu_button_back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:width="300dp"
            android:background="@drawable/hight_light_button"
            android:onClick="onMenuList"
            android:text="返回菜单"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <Button-->
    <!--        android:id="@+id/menu_button_keyboard"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/hight_light_button"-->
    <!--        android:onClick="onKeyBoard"-->
    <!--        android:text="虚拟键盘"-->
    <!--        android:textColor="@android:color/white" />-->

</androidx.constraintlayout.widget.ConstraintLayout>